[DASH-2325] Fix dashboard on safari displaying strange borders around components, remove unnecessary comma

--- a/src/assets/sass/_base.sass
+++ b/src/assets/sass/_base.sass
@@ -69,3 +69,6 @@ input:-webkit-autofill
 
   svg
     display: none !important
+
+div
+  -webkit-appearance: none !important
